--- a/pub.html
+++ b/pub.html
@@ -73,7 +73,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 2022 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'22</b></font>), Carlsbad, CA, Jul. 2022.
 						  <br>
-						  Artifact: <a href="https://github.com/xlab-uiuc/depfast/tree/atc_ae" target="_blank">DepFast</a>
+						  Code/data: <a href="https://github.com/xlab-uiuc/depfast" target="_blank">DepFast</a> (<a href="https://github.com/xlab-uiuc/depfast/tree/atc_ae" target="_blank">Artifact<a>)
 					  </span>
 				  </div>
 		  </td>
@@ -91,7 +91,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
 					          <br>
-						  Artifact: <a href="https://github.com/sieve-project/sieve" target="_blank">sieve-project/sieve</a>
+						  Code/data: <a href="https://github.com/sieve-project/sieve" target="_blank">sieve-project/sieve</a>
 					  </span>
 				  </div>
 		  </td>
@@ -109,7 +109,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
 					          <br>
-						  Artifact: <a href="https://github.com/TrinityEmulator" target="_blank">TrinityEmulator</a>
+						  Code/data: <a href="https://github.com/TrinityEmulator" target="_blank">TrinityEmulator</a>
 					  </span>
 				  </div>
 		  </td>
@@ -127,7 +127,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 17th European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'22</b></font>), Rennes, France, Apr. 2022.
 					          <br>
-						  Artifact: <a href="https://github.com/xlab-uiuc/eurosys-kfuse-artifact" target="_blank">kfuse</a>
+						  Code/data: <a href="https://github.com/xlab-uiuc/eurosys-kfuse-artifact" target="_blank">kfuse</a>
 					  </span>
 				  </div>
 		  </td>
@@ -211,7 +211,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 2020 Annual Conference of the ACM Special Interest Group on Data Communication (<font color="#083b89"><b>Sigcomm'21</b></font>), Virtual Event, August 2021.
 					          <br>
-						  Artifact: <a href="https://cellularreliability.github.io/" target="_blank">Android-MOD</a>
+						  Code/data: <a href="https://cellularreliability.github.io/" target="_blank">Android-MOD</a>
                                                   <br>
                                                   <a href="pub/cellular_reliability_public_review.pdf" target="_blank">Public review</a>
 					          <br>
@@ -233,7 +233,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 30th ACM SIGSOFT International Symposium on Software Testing and Analysis (<font color="#083b89"><b>ISSTA'21</b></font>), Virtual Event, July 2021.
 					          <br>
-						  Artifact: <a href="https://github.com/xlab-uiuc/ctest_prio_art" target="_blank">ctest_prio</a>
+						  Code/data: <a href="https://github.com/xlab-uiuc/ctest_prio_art" target="_blank">ctest_prio</a>
 						  <br>
 						  <font color="#C40233"><b>SIGSOFT Distinguished Paper Award</b></font>
 					  </span>
@@ -286,7 +286,7 @@ td.papers {
 						<br>
 						In Proceedings of the 43rd International Conference on Software Engineering (<font color="#083b89"><b>ICSE'21</b></font>), Virtual Event, May 2021.
 						<br>
-						Artifact: <a href="https://github.com/xlab-uiuc/open-cevo" target="_blank">open-cevo</a>
+						Code/data: <a href="https://github.com/xlab-uiuc/open-cevo" target="_blank">open-cevo</a>
 					</span>
 				</div>
 		</td>
@@ -304,7 +304,7 @@ td.papers {
 						<br>
 						In Proceedings of the 18th USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'21</b></font>), Virtual Event, April 2021.
 						<br>
-						Artifact: <a href="http://fastbts.thucloud.com/" target="_blank">fastbts</a>
+						Code/data: <a href="http://fastbts.thucloud.com/" target="_blank">fastbts</a>
 					</span>
 				</div>
 		</td>
@@ -322,7 +322,7 @@ td.papers {
 						<br>
 						In Proceedings of the 14th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'20</b></font>), Virtual Event, Nov. 2020.
 						<br>
-						Artifact: <a href="https://github.com/xlab-uiuc/openctest" target="_blank">openctest</a>
+						Code/data: <a href="https://github.com/xlab-uiuc/openctest" target="_blank">openctest</a>
 					</span>
 				</div>
 		</td>
@@ -340,7 +340,7 @@ td.papers {
 						<br>
 						In Proceedings of the 2020 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'20</b></font>), Virtual Event, Nov. 2020.
 						<br>
-						Artifact: <a href="https://github.com/xlab-uiuc/cdep-fse" target="_blank">cdep</a>
+						Code/data: <a href="https://github.com/xlab-uiuc/cdep-fse" target="_blank">cdep</a>
 					</span>
 				</div>
 		</td>
@@ -399,7 +399,7 @@ td.papers {
 						<br>
 						In Proceedings of the 2020 ACM SIGMETRICS Conference (<font color="#083b89"><b>Sigmetrics'20</b></font>), Virtual Event, June 2020.
 						<br>
-						Artifact: <a href="https://github.com/hckuo/Cozart" target="_blank">cozart</a>
+						Code/data: <a href="https://github.com/hckuo/Cozart" target="_blank">cozart</a>
 						<br>
 						<font color="#C40233"><b>Cozart is selected as a CACM Research Highlight article: <a href="pub/cozart-cacm.pdf" target="_blank">pdf</a>.</b></font>
 					</span>
@@ -419,7 +419,7 @@ td.papers {
 						<br>
 						In Proceedings of the 25th International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'20</b></font>), Virtual Event, Mar. 2020.
 						<br>
-						Artifact: <a href="https://github.com/dskarlatos/ElasticCuckooHashing" target="_blank">elastic cuckoo hashing</a>
+						Code/data: <a href="https://github.com/dskarlatos/ElasticCuckooHashing" target="_blank">elastic cuckoo hashing</a>
 						<br>
 						<font color="#C40233"><b>Best Paper Award</b></font>
 						<br>
@@ -441,7 +441,7 @@ td.papers {
 						<br>
 						In Proceedings of the 18th USENIX Conference on File and Storage Technologies  (<font color="#083b89"><b>FAST'20</b></font>), Santa Clara, CA, Feb. 2020.
 						<br>
-						Artifact: <a href="https://ufc2.github.io/" target="_blank">ufc</a>
+						Code/data: <a href="https://ufc2.github.io/" target="_blank">ufc</a>
 					</span>
 				</div>
 		</td>
@@ -460,7 +460,7 @@ td.papers {
     						<br>
     						In Proceedings of the 26th ACM Conference on Computer and Communications Security  (<font color="#083b89"><b>CCS'19</b></font>), London, UK, Nov. 2019.
 						<br>
-						Artifact: <a href="https://github.com/EvonX/TimeChangingDecisionTree" target="_blank">tcdt</a>
+						Code/data: <a href="https://github.com/EvonX/TimeChangingDecisionTree" target="_blank">tcdt</a>
     					</span>
     			</div>
     	</td>
@@ -498,7 +498,7 @@ td.papers {
             					Qifan Yang, Zhenhua Li, Yunhao Liu, Hai Long, Yuanchao Huang, Jiaming He, Tianyin Xu, and Ennan Zhai
 						<br>
 						In Proceedings of the 25th Annual International Conference on Mobile Computing and Networking (<font color="#083b89"><b>MobiCom'19</b></font>), Los Cabos, Mexico, Oct. 2019.
-                        <br>
+                        			<br>
 						<font color="#C40233"><b>Best Demo Award</b></font>
 					</span>
 			</div>
