--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -106,9 +106,9 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a></strong>
             <br>
-            Empowering Automated Mobile UI Testing In the Face of Real-world Complexities
+            Empowering Automated Mobile UI Testing With External Support
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in Apr. 2021.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in Jun. 2022.
             <br>
             Advisors: <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> and <a href="https://tianyin.github.io/" target="_blank">Tianyin Xu</a>
           </span>
