--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@ steidin2 at illinois dot edu</span>
 						  <TR>
                           <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
-							<p class="STYLE223">The goal of my research is to <a href="https://www.youtube.com/watch?v=T_D3d1RWBrI&t=69s" target="_blank">make computer systems reliable and secure<a>, especially those operating at the cloud and datacenter scale. 
-							My mission is to help today's systems defend against all kinds of errors and defects, such as software bugs, configuration errors, and design flaws. I am very happy that some of our work helps improve reliability of real-world systems (check out <a href="defects.html">bugs</a> we detected/fixed).</p>
+							<p class="STYLE223">The goal of my research is to <a href="https://www.youtube.com/watch?v=T_D3d1RWBrI&t=69s" target="_blank">make computer systems reliable and secure</a>, especially those operating at the cloud and datacenter scale. 
+							My mission is to help today's systems defend against all kinds of errors and defects, such as software bugs, configuration errors, and design flaws. I am very happy that some of our work helps improve reliability of real-world systems (check out <a href="defects.html" target="_blank">bugs</a> we detected/fixed).</p>
 							<p class="STYLE223">I am interested in all kinds of black magic. My view of systems research is to build the right swords to kill the dragon (not windmills).</p>
 						      <!--
 						        <p class="STYLE223">One of my favorite topics is <a href="https://twitter.com/tianyin_xu/status/1387886413375496192" target="_blank">configuration management</a>; on the other hand, I have too broad interests in anything systems and often have trouble focusing.</p>
