--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@ ol { padding-left: 1.5em; }
 4108 Siebel Center (<a href="https://cs.illinois.edu/about/contact-us", target="_blank">direction</a>)
 tyxu at illinois dot edu || <a href="https://twitter.com/tianyin_xu", target="_blank">@tianyin_xu</a> (<a href="https://twitter.com/FSEconf/status/1412086096901644292", target="_blank">huh?</a>)
 
-Assistant: Candice Steidinger
-steidin2 at illinois dot edu</span>
+Assistant: Ruth Anders
+rutha at illinois dot edu</span>
 </pre></TD>
 
   <TD width="417" rowspan="2" align=right vAlign=top><div align="left"></div></TD>
