--- a/index.html
+++ b/index.html
@@ -526,6 +526,7 @@ rutha at illinois dot edu</span>
 				  <p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, BE 2022 &rarr; UIUC (MS program)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yicheng Lu</a>, BE 2022 &rarr; UIUC (MS program)</p>    
 				  <p class="STYLE223"><a href="https://rivalak.github.io/" target="_blank">Kele Huang</a>, Summer 2021 &rarr; Columbia University (PhD program)</p>
+				  <p class="STYLE223"><a href="https://fanweneddie.github.io/" target="_blank">Wen Fan</a>, Summer 2021 &rarr; Purdue University (PhD program)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/jianyanchen2aa899154/" target="_blank">Jack Chen</a>, MS 2021 (<a href="https://www.ideals.illinois.edu/handle/2142/113272" target="_blank">thesis</a>) &rarr; Trend Micro</p>
 				  <p class="STYLE223"><a href="https://ece.illinois.edu/newsroom/news/yifei-zhu" target="_blank">YiFei Zhu</a>, BE 2021 
 					  (<a href="https://ece.illinois.edu/admissions/why-ece/honors" target="_blank"><font color="#E84A27">Highest Honor</font></a>, 
