--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@ rutha at illinois dot edu</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223">Illinois CS, <a href="https://undergradresearch.illinois.edu/" target="_blank">OUR</a>, NSF, VMware, Facebook, IBM/C3SR/IIDAI, Azure, GCP, and GitHub</p>
+				  <p class="STYLE223">Illinois CS, <a href="https://undergradresearch.illinois.edu/" target="_blank">OUR</a>, NSF, VMware, Facebook, IBM/C3SR/IIDAI, Intel, Azure, GCP, and GitHub</p>
                              </TD>
                          </TR>
 
