--- a/index.html
+++ b/index.html
@@ -524,17 +524,18 @@ rutha at illinois dot edu</span>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/kaihsun1996/" target="_blank">Kai-Hsun (Kevin) Chen</a>, M.Eng 2022 &rarr; Databricks &rarr; Anyscale</p>
 				  <p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, BE 2022 &rarr; UIUC (MS program)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yicheng Lu</a>, BE 2022 &rarr; UIUC (MS program)</p>    
-				  <p class="STYLE223"><a href="https://rivalak.github.io/" target="_blank">Kele Huang</a>, Summer 2021 &rarr; Columbia University (PhD program)</p>
-				  <p class="STYLE223"><a href="https://fanweneddie.github.io/" target="_blank">Wen Fan</a>, Summer 2021 &rarr; Purdue University (PhD program)</p>
+				  <p class="STYLE223"><a href="https://rivalak.github.io/" target="_blank">Kele Huang</a> (CAS), Summer 2021 &rarr; Columbia University (PhD program)</p>
+				  <p class="STYLE223"><a href="https://fanweneddie.github.io/" target="_blank">Wen Fan</a> (USTC), Summer 2021 &rarr; Purdue University (PhD program)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/jianyanchen2aa899154/" target="_blank">Jack Chen</a>, MS 2021 (<a href="https://www.ideals.illinois.edu/handle/2142/113272" target="_blank">thesis</a>) &rarr; Trend Micro</p>
 				  <p class="STYLE223"><a href="https://ece.illinois.edu/newsroom/news/yifei-zhu" target="_blank">YiFei Zhu</a>, BE 2021 
 					  (<a href="https://ece.illinois.edu/admissions/why-ece/honors" target="_blank"><font color="#E84A27">Highest Honor</font></a>, 
 					   <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5" target="_blank"><font color="#E84A27">University Honor</font></a>) &rarr; Google (kernel)</p>
 				  <p class="STYLE223"><a href="https://sampalomad.github.io/" target="_blank">Sam Cheng</a>, PhD student, co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a> &rarr; Switched to the AI/ML area after two years, in 2021 </p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/andrew-yoo-5a5559182/" target="_blank">Andrew B. Yoo</a>, MS 2021 (<a href="https://www.ideals.illinois.edu/handle/2142/110716" target="_blank">thesis</a>), co-advised by <a href="http://mpaxos.com/" target="_blank">Shuai Mu</a>, <a href="https://cs.illinois.edu/news/five-cs-graduate-students-2021-siebel-scholars" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Whova (Infra)</p>
-				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yuanliang Zhang</a>, Visiting PhD student, 2019--2020 &harr; NUDT</p>
+				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yuanliang Zhang</a> (NUDT), Visiting PhD student, 2019--2020 &harr; NUDT</p>
 				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a>, MCS 2020 (<a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream Computing Infra)</p>
 				  <p class="STYLE223"><a href="https://chenqingrong.github.io/" target="_blank">Qingrong Chen</a>, MS 2020 (<a href="https://www.ideals.illinois.edu/handle/2142/108029" target="_blank">thesis</a>), <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Facebook (AI Infra) &rarr; ByteDance (ML Infra) </p>
+				  <p class="STYLE223"><a href="https://kaiyuanzhang.com/" target="_blank">Kaiyuan Zhang</a> (UT Dallas), Summer 2020 &rarr; Purdue University (PhD program)</p>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a>, MS 2019 (<a href="https://www.ideals.illinois.edu/handle/2142/106384" target="_blank">thesis</a>) &rarr; Google (Spanner)</p>
                              </TD>
                           </TR>
