--- a/index.html
+++ b/index.html
@@ -346,26 +346,39 @@ steidin2 at illinois dot edu</span>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
-						        <p class="STYLE223">Spring 2022 <a href="https://cs598txu-uiuc.github.io/spring22/" target="_blank">CS 598(XU): Reliability of Cloud-Scale Systems</a></p>
-						        <p class="STYLE223">Spring 2022 <a href="https://systems-seminar-uiuc.github.io/spring22/" target="_blank">CS 591(SN): Systems Reading Group</a></p>
-						        <p class="STYLE223">Spring 2022 <a href="https://wiki.illinois.edu/wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
-						        <p class="STYLE223">Fall 2021 <a href="https://cs523-uiuc.github.io/fall21/" target="_blank">CS 523: Advanced Operating Systems</a></p>
-						        <p class="STYLE223">Fall 2021 <a href="https://systems-seminar-uiuc.github.io/fall21/" target="_blank">CS 591(DS): Systems Reading Group</a></p>
-						        <p class="STYLE223">Fall 2021 <a href="https://wiki.illinois.edu//wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
-						        <p class="STYLE223">Spring 2021 <a href="https://systems-seminar-uiuc.github.io/spring21/" target="_blank">CS 591(IG): Systems Reading Group (together with Distributed System Seminar)</a></p>
-						        <p class="STYLE223">Spring 2021 <a href="https://wiki.illinois.edu//wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
-						        <p class="STYLE223">Fall 2020 <a href="https://cs523-uiuc.github.io/fall20/" target="_blank">CS 523: Advanced Operating Systems</a></p>
-						        <p class="STYLE223">Fall 2020 <a href="https://systems-seminar-uiuc.github.io/fall20/" target="_blank">CS 591(IG): Systems Reading Group (together with Distributed System Seminar)</a></p>
-						        <p class="STYLE223">Fall 2020 <a href="https://wiki.illinois.edu//wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
-						        <p class="STYLE223">Spring 2020 <a href="https://cs423-uiuc.github.io/spring20/" target="_blank">CS 423: Operating System Design</a></p>
-						        <p class="STYLE223">Spring 2020 <a href="https://systems-seminar-uiuc.github.io/spring20/" target="_blank">CS 591(IG): Systems Reading Group (together with Distributed System Seminar)</a></p>
-						        <p class="STYLE223">Spring 2020 <a href="https://wiki.illinois.edu//wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
-                    					<p class="STYLE223">Fall 2019 <a href="https://cs523-uiuc.github.io/fall19/" target="_blank">CS 523: Advanced Operating Systems</a></p>
-						      	<p class="STYLE223">Fall 2019 <a href="https://systems-seminar-uiuc.github.io/fall19/" target="_blank">CS 591(SN): Systems Reading Group</a></p>
-						        <p class="STYLE223">Fall 2019 <a href="https://wiki.illinois.edu//wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
-                    					<p class="STYLE223">Spring 2019 <a href="https://cs598txu-uiuc.github.io/spring19/" target="_blank">CS 598(TXU): Reliable Software Systems</a></p>
-						        <p class="STYLE223">Spring 2019 <a href="https://systems-seminar-uiuc.github.io/spring19/" target="_blank">CS 591: System and Networking Seminar</a></p>
-							<p class="STYLE223">Fall 2018 <a href="https://cs598txu-uiuc.github.io/fall18/" target="_blank">CS 598(TXU): Reliability of Cloud-Scale Systems</a></p>
+						        <p class="STYLE223">CS 598(XU): Reliability of Cloud-Scale Systems 
+									(<a href="https://cs598txu-uiuc.github.io/fall18/" target="_blank">Fall 18</a>) 
+									(<a href="https://cs598txu-uiuc.github.io/spring19/" target="_blank">Spring 19</a>)
+									(<a href="https://cs598txu-uiuc.github.io/spring22/" target="_blank">Spring 22</a>)
+								</p>
+								<p class="STYLE223">CS 523: Advanced Operating Systems
+									(<a href="https://cs523-uiuc.github.io/fall19/" target="_blank">Fall 19</a>) 
+									(<a href="https://cs523-uiuc.github.io/fall20/" target="_blank">Fall 20</a>)
+									(<a href="https://cs523-uiuc.github.io/fall21/" target="_blank">Fall 21</a>)
+								</p>
+								<p class="STYLE223">CS 423: Operating System Design
+									(<a href="https://cs423-uiuc.github.io/spring20/" target="_blank">Spring 20</a>)
+									(<a href="https://cs423-uiuc.github.io/fall22/" target="_blank">Fall 22</a>)
+								</p>
+								<p class="STYLE223">CS 591(SN): Systems Reading Group
+									(<a href="https://systems-seminar-uiuc.github.io/spring19/" target="_blank">Spring 19</a>)
+									(<a href="https://systems-seminar-uiuc.github.io/fall19/" target="_blank">Fall 19</a>)
+									(<a href="https://systems-seminar-uiuc.github.io/spring20/" target="_blank">Spring 20</a>)
+									(<a href="https://systems-seminar-uiuc.github.io/fall20/" target="_blank">Fall 20</a>)
+									(<a href="https://systems-seminar-uiuc.github.io/spring21/" target="_blank">Spring 21</a>)
+									(<a href="https://systems-seminar-uiuc.github.io/fall21/" target="_blank">Fall 21</a>)
+									(<a href="https://systems-seminar-uiuc.github.io/spring22/" target="_blank">Spring 22</a>)
+									(<a href="https://systems-seminar-uiuc.github.io/fall22/" target="_blank">Fall 22</a>)	
+								</p>
+								<p class="STYLE223">CS 591(SE): Software Engineering Seminar
+									(<a href="https://wiki.illinois.edu/wiki/display/SoftEng" target="_blank">Fall 19</a>)
+									(<a href="https://wiki.illinois.edu/wiki/display/SoftEng" target="_blank">Spring 20</a>)
+									(<a href="https://wiki.illinois.edu/wiki/display/SoftEng" target="_blank">Fall 20</a>)
+									(<a href="https://wiki.illinois.edu/wiki/display/SoftEng" target="_blank">Spring 21</a>)
+									(<a href="https://wiki.illinois.edu/wiki/display/SoftEng" target="_blank">Fall 21</a>)
+									(<a href="https://wiki.illinois.edu/wiki/display/SoftEng" target="_blank">Spring 22</a>)
+									(<a href="https://wiki.illinois.edu/wiki/display/SoftEng" target="_blank">Fall 22</a>)
+								</p>
 						  </TD>
                           </TR>
 
