--- a/index.html
+++ b/index.html
@@ -512,17 +512,25 @@ rutha at illinois dot edu</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>  
                               <TD class=content width="96%">
-				  <p class="STYLE223"><a href="https://chaitanya-bhandari.com/" target="_blank">Chaitanya B. Bhandari</a></p>
-				  <p class="STYLE223"><a href="https://schai.me/" target="_blank">Siyuan Chai</a></p>
-				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yinfang Chen</a></p>
-				  <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a> (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a>)</p>
-				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jinghao Jia</a> (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>)</p>
-				  <p class="STYLE223"><a href="https://laphets.com" target="_blank">Wenqing Luo</a></p>
-				  <p class="STYLE223"><a href="https://stuart0l.github.io/" target="_blank">Xuhao Luo</a></p>
-				  <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a> (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/yunni-and-maxine-pao-memorial-fellowship" target="_blank"><font color="#E84A27">Yunni and Maxine Pao Memorial Fellowship</font></a>)</p>
-				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Lilia Tang</a> (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/ray-ozzie-computer-science-fellowship" target="_blank"><font color="#E84A27">Ray Ozzie Fellowship</font></a>)</p>
-                                  <p class="STYLE223"><a href="https://thakkarparth007.github.io/" target="_blank">Parth Thakkar</a></p>
-				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Shuai Wang</a>, co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
+								<p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a> (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/yunni-and-maxine-pao-memorial-fellowship" target="_blank"><font color="#E84A27">Yunni and Maxine Pao Memorial Fellowship</font></a>), PhD student (Fall 2019 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jinghao Jia</a> (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>), PhD student (Fall 2020 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Lilia Tang</a> (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/ray-ozzie-computer-science-fellowship" target="_blank"><font color="#E84A27">Ray Ozzie Fellowship</font></a>), PhD student (Fall 2020 - now)</p>
+								<p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a> (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a>), PhD student (Fall 2021 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Shuai Wang</a>, PhD student (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>				  
+								<p class="STYLE223"><a href="https://schai.me/" target="_blank">Siyuan Chai</a>, PhD student (Fall 2021 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yinfang Chen</a>, PhD student (Fall 2021 - now)</p>
+								<p class="STYLE223"><a href="https://stuart0l.github.io/" target="_blank">Xuhao Luo</a>, PhD student (Fall 2021 - now)</p>
+								<p class="STYLE223"><a href="https://laphets.com" target="_blank">Wenqing Luo</a>, MS student (Fall 2021 - now)</p>
+								<p class="STYLE223"><a href="https://thakkarparth007.github.io/" target="_blank">Parth Thakkar</a>, MS student (Fall 2021 - now)</p>
+								<p class="STYLE223"><a href="https://chaitanya-bhandari.com/" target="_blank">Chaitanya B. Bhandari</a>, MS student (Fall 2022 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Anna Mazhar</a>, MS student (Fall 2022 - now)</p>
+								<p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, MS student (Fall 2022 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yicheng Lu</a>, MS student (Fall 2022 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiyuan Zhang</a>, MS student (Fall 2022 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yuxuan (Matt) Jiang</a>, Undergrad student (Summer 2021 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Kunle Li</a>, Undergrad student (Summer 2022 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yifei Song</a>, Undergrad student (Summer 2022 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Ze Yang</a>, Undergrad student (Summer 2022 - now)</p>
                              </TD>
                           </TR>
 
