--- a/travel.html
+++ b/travel.html
@@ -382,6 +382,7 @@ div.Section1
 						     <li>Des Moines, IA (2018) </li>
 						     <li>Elko, NV (2018) </li>
 						     <li>Farmington, PA (2013) </li>
+						     <li>Frankfort, KY (2021) </li>
 					             <li>Fremont, CA (2017-2018) </li>
 						     <li>Indianapolis, IN (2021) </li>  
 						     <li>Irvine, CA (2016) </li>
