--- a/pub.html
+++ b/pub.html
@@ -93,7 +93,14 @@ td.papers {
 					          <br>
 						  Code/data: <a href="https://github.com/sieve-project/sieve" target="_blank">Sieve</a> (<a href="https://github.com/sieve-project/sieve/tree/osdi-ae" target="_blank">research artifact<a>)
 						  <br>
-						  <font color="#C40233"><b>Covered by <a href="https://octo.vmware.com/a-promising-new-approach-to-reliability-testing-for-cluster-management-controllers/" target="_blank">VMware Office of CTO Blog</a></b></font>
+						  <font color="#C40233">
+					            <b>Covered by <a href="https://octo.vmware.com/a-promising-new-approach-to-reliability-testing-for-cluster-management-controllers/" target="_blank">VMware Office of CTO Blog</a> 
+							    (<a href="https://twitter.com/kitcolbert/status/1550199936477605889" target="_blank">endorsement from Kit Colbert</a>),
+							  <a href="https://news.ycombinator.com/item?id=32208820" target="_blank">Hacker News</a>
+						    </b>,
+					          </font>
+					          <br>
+						  <font color="#C40233"><b>Presentation at <a href="https://kccncna2021.sched.com/event/lV0S?iframe=no" target="_blank">KubeCon and CloudNativeCon</a></b></font>
 					  </span>
 				  </div>
 		  </td>
@@ -254,8 +261,6 @@ td.papers {
 						      Xudong Sun, Lalith Suresh, Aishwarya Ganesan, Ramnatthan Alagappan, Michael Gasch, Lilia Tang, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 18th Workshop on Hot Topics in Operating Systems (<font color="#083b89"><b>HotOS-XVIII</b></font>), Virtual Event, May 2021.
-						  <br>
-						  <font color="#C40233"><b>Selected for presentation at <a href="https://kccncna2021.sched.com/event/lV0S?iframe=no" target="_blank">KubeCon and CloudNativeCon</a></b></font>
 					  </span>
 				  </div>
 		  </td>
