--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@ rutha at illinois dot edu</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
+		        <p class="STYLE223">The Sieve team is spotlighted by <a href="https://cs.illinois.edu/news/illinois-and-vmwares-collaborative-research-develops-practical-reliability-testing-techniques-for-cluster-management-controllers" target="_blank">CS news</a></p>
 		        <p class="STYLE223">Sieve is covered by <a href="https://octo.vmware.com/a-promising-new-approach-to-reliability-testing-for-cluster-management-controllers/" target="_blank">VMware Office of CTO Blog</a> and is endorsed by <a href="https://twitter.com/kitcolbert/status/1550199936477605889" target="_blank">Kit Colbert</a> (VMware CTO)</p>
 		        <p class="STYLE223">Cozart is selected as a 2022 CACM Research Highlight article: <a href="pub/cozart-cacm.pdf" target="_blank">pdf</a></p>
 		        <p class="STYLE223">Sieve is selected for presentation at
