--- a/pub.html
+++ b/pub.html
@@ -73,7 +73,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 2022 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'22</b></font>), Carlsbad, CA, Jul. 2022.
 						  <br>
-						  Code/data: <a href="https://github.com/xlab-uiuc/depfast" target="_blank">DepFast</a> (<a href="https://github.com/xlab-uiuc/depfast/tree/atc_ae" target="_blank">research artifact<a>)
+						  Code/data: <a href="https://github.com/xlab-uiuc/depfast" target="_blank">DepFast</a> (<a href="https://github.com/xlab-uiuc/depfast/tree/atc_ae" target="_blank">research artifact</a>)
 					  </span>
 				  </div>
 		  </td>
