--- a/index.html
+++ b/index.html
@@ -527,10 +527,11 @@ rutha at illinois dot edu</span>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yicheng Lu</a>, MS student (Fall 2022 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Anna Mazhar</a>, MS student (Fall 2022 - now)</p>
 				                                <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiyuan Zhang</a>, MS student (Fall 2022 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yuxuan (Matt) Jiang</a>, Undergrad student (Summer 2021 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Kunle Li</a>, Undergrad student (Summer 2022 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yifei Song</a>, Undergrad student (Summer 2022 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Ze Yang</a>, Undergrad student (Summer 2022 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yuxuan (Matt) Jiang</a>, Undergrad student (ZJUI) (Summer 2021 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Kunle Li</a>, Undergrad student (ZJUI) (Summer 2022 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yifei Song</a>, Undergrad student (ZJUI) (Summer 2022 - now)</p>
+				                                <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Muhammad Taha</a>, Undergrad student (LUMS) (Summer 2022 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Ze Yang</a>, Undergrad student (ZJUI) (Summer 2022 - now)</p>
                              </TD>
                           </TR>
 
