--- a/defects.html
+++ b/defects.html
@@ -224,7 +224,7 @@ div.Section1
 		        <p></p>
 		</blockquote>
 
-			<p class="style2"><font face="Times New Roman">
+		<p class="style2"><font face="Times New Roman">
 		<span class="type"><span style="font-style: normal;"><font size="4" color="#083b89">Redis KV Store</font></span></span></font></p>
 		<blockquote>
                         <div align="justify" class="STYLE4" style="font-size: 12pt; font-family: Times New Roman;">
@@ -233,8 +233,20 @@ div.Section1
                         </div>
 		        <p></p>
 		</blockquote>
-				<p>
-	  				</p></td>
+		
+		<p class="style2"><font face="Times New Roman">
+		<span class="type"><span style="font-style: normal;"><font size="4" color="#083b89">Kubernetes Operators</font></span></span></font></p>
+		<blockquote>
+                        <div align="justify" class="STYLE4" style="font-size: 12pt; font-family: Times New Roman;">
+                        	<a href="https://github.com/sieve-project/sieve/blob/main/docs/bugs.md" target="_blank">46 new bugs</a> found by 
+				<a href="https://github.com/sieve-project/sieve" target="_blank">Sieve</a> 
+				(<a href="https://github.com/sieve-project/sieve/blob/main/docs/reprod.md" target="_blank">replication package</a>)
+                        </div>
+		        <p></p>
+		</blockquote>
+		<p>
+	  	</p>
+	  </td>
   	<td width="5%"><!--DWLayoutEmptyCell-->&nbsp;</td>
   </tr>
 </tbody></table> 
