--- a/pub.html
+++ b/pub.html
@@ -104,7 +104,7 @@ td.papers {
 					          <br>
 						  <font color="#C40233"><b>Xudong and Lalith are invited to present Sieve at <a href="https://kccncna2021.sched.com/event/lV0S" target="_blank">KubeCon + CloudNativeCon North America 2021</a></b></font>
 					          <br>
-					          <font color="#C40233"><b>Lalith and Michael are invited to present Sieve at at <a href="https://kubebyexample.com/community/kbe-insider" target="_blank">KBE Insider</a></b></font>
+					          <font color="#C40233"><b>Lalith and Michael are invited to present Sieve at at <a href="https://kubebyexample.com/community/kbe-insider" target="_blank">KBE Insider</a> (Episode 14)</b></font>
 					  </span>
 				  </div>
 		  </td>
