--- a/pub.html
+++ b/pub.html
@@ -397,6 +397,22 @@ td.papers {
 				</div>
 		</td>
 	</tr>
+    
+    <tr>
+      <td class="date"><font color="#083b89">MobiCom'20</font></td>
+  		<td class="papers">
+				<div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						<strong> Aging or Glitching? Why Does Android Stop Responding and What Can We Do About It?</strong> [<a href="pub/android-mod.pdf" target="_blank">pdf</a> | <a href="pub/android-mod_bib.txt" target="_blank">bib</a>]
+						<br>
+            					Mingliang Li, Hao Lin, Cai Liu, Zhenhua Li, Feng Qian, Yunhao Liu, Nian Sun, and Tianyin Xu,
+						<br>
+						In Proceedings of the 26th Annual International Conference on Mobile Computing and Networking (<font color="#083b89"><b>MobiCom'20</b></font>), Virtual Event, Sep. 2020.
+					</span>
+				</div>
+		</td>
+    </tr>
 
     <tr>
       <td class="date"><font color="#083b89">Sigmetrics'20</font></td>
