--- a/pub.html
+++ b/pub.html
@@ -118,7 +118,7 @@ td.papers {
 						  <span style="font-size: 12pt;">
 						  <strong>Trinity: High-Performance Mobile Emulation through Graphics Projection</strong> [<a href="pub/trinity.pdf" target="_blank">pdf</a> | <a href="pub/trinity_bib.txt" target="_blank">bib</a>]
 						  <br>
-						      Di Gao, Hao Lin, Zhenhua Li, Chengen Huang, Liangyi Gong, Feng Qian, Yunhao Liu, and Tianyin Xu,
+						      Di Gao, Hao Lin, Zhenhua Li, Chengen Huang, Yunhao Liu, Feng Qian, Liangyi Gong, and Tianyin Xu,
 						  <br>
 						  In Proceedings of the 16th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'22</b></font>), Carlsbad, CA, Jul. 2022.
 					          <br>
