--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -79,7 +79,25 @@ td.papers {
       </font>
     </td>
   <tr>
-	 
+  
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong>Hongpeng Guo</strong>
+            <br>
+<!--            Soft Real Time Resource Management on Heterogeneous Architectures across Edge and Cloud for Visual Information
+            <br>-->
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed the thesis proposal in Sep. 2021.
+            <br>
+            Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	  
   <tr>
     <td class="date"><font color="#083b89"></font></td>
       <td class="papers">
@@ -88,7 +106,7 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong>Zhe Yang</strong>
             <br>
-            Soft Real Time Resource Management on Heterogeneous Architectures across Edge and Cloud for Visual Information
+            Soft Real Time Resource Management for Vision Based Internet of Things Systems
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed the thesis proposal in Sep. 2021.
             <br>
