--- a/index.html
+++ b/index.html
@@ -521,7 +521,8 @@ rutha at illinois dot edu</span>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yinfang Chen</a>, PhD student (Fall 2021 - now)</p>
 				                                <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a>, PhD student (Fall 2021 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Shuai Wang</a>, PhD student (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>				  
-								<p class="STYLE223"><a href="https://laphets.com" target="_blank">Wenqing Luo</a>, MS student (Fall 2021 - now)</p>
+								<p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Henry Zhu</a>, PhD student (Fall 2022 - now), co-advised by <a href="https://aishwaryaganesan.github.io/" target="_blank">Aishwarya Ganesan</a> and <a href="https://ramalagappan.github.io/" target="_blank">Ramnatthan Alagappan</a></p>
+				                                <p class="STYLE223"><a href="https://laphets.com" target="_blank">Wenqing Luo</a>, MS student (Fall 2021 - now)</p>
 								<p class="STYLE223"><a href="https://thakkarparth007.github.io/" target="_blank">Parth Thakkar</a>, MS student (Fall 2021 - now)</p>
 								<p class="STYLE223"><a href="https://chaitanya-bhandari.com/" target="_blank">Chaitanya B. Bhandari</a>, MS student (Fall 2022 - now)</p>
 								<p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, MS student (Fall 2022 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
