--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -79,7 +79,25 @@ td.papers {
       </font>
     </td>
   <tr>
-  
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong>Bingzhe Liu</strong>
+            <br>
+<!--            Soft Real Time Resource Management on Heterogeneous Architectures across Edge and Cloud for Visual Information
+            <br>-->
+            Department of Computer Science, University of Illinois at Urbana-Champaign
+            <br>
+            Advisor: <a href="https://pbg.cs.illinois.edu/" target="_blank">Brighten Godfrey</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	  
   <tr>
     <td class="date"><font color="#083b89"></font></td>
       <td class="papers">
