--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -122,11 +122,11 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong>Zhe Yang</strong>
+            <strong>Zhe Yang</strong>, Ph.D.
             <br>
             Soft Real Time Resource Management for Vision Based Internet of Things Systems
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed the thesis proposal in Sep. 2021.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in Sep. 2022.
             <br>
             Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
           </span>
@@ -140,7 +140,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a></strong>
+            <strong><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a></strong>, Ph.D.
             <br>
             Empowering Automated Mobile UI Testing With External Support
             <br>
