--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ rutha at illinois dot edu</span>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Kunle Li</a>, Undergrad student (ZJUI) (Summer 2022 - now)</p>
 								<!-- <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yifei Song</a>, Undergrad student (ZJUI) (Summer 2022 - now)</p> -->
 				                                <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Muhammad Taha</a>, Undergrad student (LUMS) (Summer 2022 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Ze Yang</a>, Undergrad student (ZJUI) (Summer 2022 - now)</p>
+								<p class="STYLE223"><a href="https://tseyanghub.github.io/" target="_blank">Ze Yang</a>, Undergrad student (ZJUI) (Summer 2022 - now)</p>
                              </TD>
                           </TR>
 
