--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -79,6 +79,26 @@ td.papers {
       </font>
     </td>
   <tr>
+	  
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong>Dan Plyukhin</strong>
+            <br>
+<!--
+                Scalable Resource Management for Internet-of-Things (IoT) Applications: Challenges, Methods and Tools
+            <br>
+-->
+            Department of Computer Science, University of Illinois at Urbana-Champaign
+            <br>
+            Advisor: <a href="http://osl.cs.illinois.edu/members/agha.html" target="_blank">Gul Agha</a>
+          </span>
+        </div>
+      </td>
+  </tr>
 
   <tr>
     <td class="date"><font color="#083b89"></font></td>
@@ -86,7 +106,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong>Bingzhe Liu</strong>
+            <strong><a href="https://bingzhe.web.engr.illinois.edu/" target="_blank">Bingzhe Liu</a></strong>
             <br>
 <!--            Soft Real Time Resource Management on Heterogeneous Architectures across Edge and Cloud for Visual Information
             <br>-->
