--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -126,9 +126,9 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong>Hongpeng Guo</strong>
             <br>
-<!--            Soft Real Time Resource Management on Heterogeneous Architectures across Edge and Cloud for Visual Information
-            <br>-->
-            Department of Computer Science, University of Illinois at Urbana-Champaign
+            Multi-objective Optimizations for Resource-efficient Large Scale Machine Learning Systems
+            <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim in Oct. 2022.
             <br>
             Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
           </span>
